  - Allow larger CPU 'quantum' values when emulating SMP systems for speed
    (quantum values up to 32 are allowed now).

- I/O Devices
  - Networking
    - Ported Intel(R) 82540EM Gigabit Ethernet adapter emulation from Qemu,
      to enable configure with option --enable-e1000
    - Added PCI network boot ROM support to all network adapters
  - PCI
    - added "auto-assign to PCI slot" feature for PCI-only devices
  - DMA
    - Added the capability to transfer more then one byte per ISA DMA cycle
  - VGA
    - Major rewrite of the vga / cirrus code:
      - vgacore (shared standard VGA emulation code)
      - vga (Bochs VBE and PCI VGA)
      - cirrus (CL-GD 5430 ISA / CL-GD 5446 PCI)
    - Added VGA graphics blinking support
    - More accurate vertical and horizontal retrace emulation
      (based on the DOSBox implementation)
  - hard drive / hdimage
    - added new disk image mode 'vpc' for VirtualPC images
    - undoable mode: added coherency check (flat image size and timestamp)
    - sparse mode: fixed read support
  - Sound
    - implemented PC speaker beep using the lowlevel sound interface
    - added SDL audio output support

- ROM BIOS
  - improved PCI boot ROM support (for VGA and other devices)
  - added MADT entry for Interrupt Source Override to ACPI tables

- GUI and display libraries
  - implemented "auto-off" timer for status LEDs indicating a data transfer
  - Implemented "hideIPS" option in sdl and wx libraries
  - Added support for sending absolute mouse position values from the gui if an
    absolute pointing device (USB tablet) is active (rfb, sdl, win32, wx, x).
  - Gui debugger now supported when using sdl gui on Windows

- Tools
  - bxcommit: added support for converting growing to flat mode images
  - bxcommit: support command line options and non-interactive (quiet) mode
  - bximage: increased maximum disk size to 8 TB

- SF patches applied
  [3540389] Patch 5 : Change memory reference functions argument order by Yeong-uk Jo